Compiler/tests/typing/bad/testfile-assign-7.rs

fn foo() {}
fn main() { let x = 42; x = foo(); }
